# fabric-cicd

./: .changie.yaml  .coveragerc  .gitignore  404.html  =0.9.5  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEBUG_GUIDE.md  FabricCicd.sln  README.PROJECT.md  README.md  README.rst  activate.ps1  activate.sh  azure-pipelines-SETUP.md  azure-pipelines.yml  environment.yml  fabriccicd.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-doc.txt  requirements.txt  ruff.toml  seed_files.py  seed_tables.py  setup.cfg  setup.py  sitemap.xml  versions.json
.changes/: v0.1.23.md  v0.1.27.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v1.0.0.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/: 404.html  index.html  sitemap.xml
0.1.10/: 404.html  index.html  sitemap.xml
0.1.11/: 404.html  index.html  objects.inv  sitemap.xml
0.1.12/: 404.html  index.html  objects.inv  sitemap.xml
0.1.13/: 404.html  index.html  sitemap.xml
0.1.14/: 404.html  index.html  sitemap.xml
0.1.15/: 404.html  index.html  sitemap.xml
0.1.16/: 404.html  index.html  sitemap.xml
0.1.17/: 404.html  index.html  sitemap.xml
0.1.18/: 404.html  index.html  sitemap.xml
0.1.19/: 404.html  index.html  sitemap.xml
0.1.2/: 404.html  index.html  sitemap.xml
0.1.20/: 404.html  index.html  sitemap.xml
0.1.21/: 404.html  index.html  sitemap.xml
0.1.22/: 404.html  index.html  sitemap.xml
0.1.23/: 404.html  index.html  sitemap.xml
0.1.24/: 404.html  index.html  sitemap.xml
0.1.25/: 404.html  index.html  sitemap.xml
0.1.26/: 404.html  index.html  sitemap.xml
0.1.27/: 404.html  index.html  objects.inv  sitemap.xml
0.1.28/: 404.html  index.html  sitemap.xml
0.1.29/: 404.html  index.html  sitemap.xml
0.1.3/: 404.html  index.html  sitemap.xml
0.1.30/: 404.html  index.html  sitemap.xml
0.1.31/: 404.html  index.html  sitemap.xml
0.1.32/: 404.html  index.html  sitemap.xml
0.1.33/: 404.html  index.html  sitemap.xml
0.1.34/: 404.html  index.html  sitemap.xml
0.1.4/: 404.html  index.html  sitemap.xml
0.1.5/: 404.html  index.html  sitemap.xml
0.1.6/: 404.html  index.html  sitemap.xml
0.1.7/: 404.html  index.html  sitemap.xml
0.1.8/: 404.html  index.html  sitemap.xml
0.1.9/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.2.0/: 404.html  index.html  sitemap.xml
FabricCicd.Console/: FabricCicd.Console.csproj  Program.cs
FabricCicd.Tests/: FabricCicd.Tests.csproj  ItemPublisherTests.cs  PublishTests.cs  UnitTest1.cs
changelog/: index.html
code_reference/: index.html
contribution/: index.html
debug/: debug_local.py
devtools/: debug_api.py  debug_local config.py  debug_local.py  debug_parameterization.py  debug_publish_all.py  debug_trace_deployment.py  debug_trace_publish_all.py  pypi_build_release_dev.ps1  update_python_version.py
docs/: about.md  changelog.md  conf.py  contribution.md  example.md  index.md  index.rst  (+1 more)
(+928 files in other folders)
