[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-cicd"
authors = [
    { name = "Microsoft Corporation" }
]
dynamic = ["version", "dependencies", "optional-dependencies"]

description = "Microsoft Fabric CI/CD"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3"
]
license = { text = "MIT License" }

[tool.setuptools.dynamic]
version = {file = "VERSION"}
dependencies = {file = "requirements.txt"}
optional-dependencies.dev = {file = "requirements-dev.txt"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Repository = "https://github.com/microsoft/fabric-cicd.git"

[tool.ruff]
line-length = 120
exclude = ["debug", "sample"]

[tool.ruff.lint]
preview=true
select = ["I"]

[tool.ruff.format]
preview=true
