[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-cicd"
authors = [{ name = "Microsoft Corporation" }]
description = "Microsoft Fabric CI/CD"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["version"]
urls.Repository = "https://github.com/microsoft/fabric-cicd.git"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "azure-identity>=1.19.0",
    "colorlog>=6.9.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[tool.setuptools]
dynamic.version = { file = "VERSION" }
packages.find.where = ["src"]

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "mike>=2.1.3",
    "mkdocs-include-markdown-plugin>=7.1.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings-python>=1.13.0",
]

[tool.uv]
package = true
python-preference = "only-managed"
