[project]
name = "fabric-cicd"
authors = [{ name = "Microsoft Corporation" }]
description = "Microsoft Fabric CI/CD"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
dynamic = ["version"]
urls.Repository = "https://github.com/microsoft/fabric-cicd.git"

dependencies = [
    "azure-identity>=1.19.0",
    "colorlog>=6.9.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]


[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "mike>=2.1.3",
    "mkdocs-include-markdown-plugin>=7.1.2",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings-python>=1.13.0",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
dynamic.version = { file = "VERSION" }
packages.find.where = ["src"]

[tool.uv]
package = true
python-preference = "only-managed"

[tool.bumpver]
current_version = "0.0.1"             # ignore, version is determined by VERSION file
version_pattern = "MAJOR.MINOR.PATCH"
# below fields are optional, default value is false
commit_message = "Update Version: v{old_version} -> v{new_version}"
commit = true  # creates a new commit for the version update with the above defined message
#push = true  # pushes the commit automatically to github
tag_message = "{new_version}"
tag_scope = "default"
tag = true

[tool.bumpver.file_patterns]
"VERSION" = ["{version}"]
